[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcdc"
version = "0.9.0"
authors = [
  { name="Ilham Variansyah", email="variansi@oregonstate.edu" },
  { name="Sam Pasmann", email="spasmann@nd.edu" },
  { name="Joanna Morgan", email="morgajoa@oregonstate.edu" },
  { name="Kayla Clements", email="clemekay@oregonstate.edu" },
  { name="Braxton Cuneo", email="bcuneo@seattleu.edu" },
  { name="Charles Goodman"},
  { name="Caleb Shaw"},
  { name="Rohan Pankaj"},
  { name="Jordan Northrop"},
]
description = "Monte Carlo / Dynamic Code, a pure python high performance Monte Carlo neutronics package"
readme = "README.md"
requires-python = ">=3.9, <=3.11.8"
license = {file = "LICENSE"}
keywords = ["Monte Carlo", "Nuclear", "GPU", "numba", "mpi4py", "neutron transport", "neutronics", "HPC"]
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Typing :: Typed',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = [
    "numba>=0.58.0",
    "numpy",
    "scipy",
    "matplotlib",
    "mpi4py>=3.1.5",
    "pytest",
    "h5py",
    "colorama",
    "black",
]
[project.optional-dependencies]
    docs = ["sphinx==7.2.6", "furo", "sphinx_toolbox"]
    viz = ["ngsolve", "distinctipy"]



[project.urls]
Repository = "https://github.com/CEMeNT-PSAAP/MCDC"
Homepage = "https://cement-psaap.github.io/"
Documentation = "https://cement-psaapgithubio.readthedocs.io/en/latest/"
Issues = "https://github.com/CEMeNT-PSAAP/MCDC/issues"